# cmake_playground_playground

./: .gitlab-ci.yml  CMakeLists.txt  Readme.md
source/: CMakeLists.txt
source/awesome_tool_app/: CMakeLists.txt  main.cpp
source/wrapper/app/: CMakeLists.txt  main.cpp
